[package]
name = "ronat"
version = "0.1.0"
description = "Rust linter for documentation"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
repository = "https://github.com/hobofan/ronat"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ronat", "lint", "plugin", "documentation", "spelling"]

[dependencies]
ispell = "0.3.0"
markdown = "0.2.0"
docstrings = {git = "https://github.com/killercup/rust-docstrings.git"}

[dev-dependencies]
compiletest_rs = "0.2.5"

[lib]
name = "ronat"
plugin = true
test = false
